After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752426 - dashdemux: gst_mpdparser_get_xml_prop_duration does not set default value in case of parsing errors
dashdemux: gst_mpdparser_get_xml_prop_duration does not set default value in ...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-15 15:18 UTC by Florin Apostol
Modified: 2015-08-16 13:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1.63 KB, patch)
2015-07-15 15:22 UTC, Florin Apostol
committed Details | Review

Description Florin Apostol 2015-07-15 15:18:56 UTC
Similar with gst_mpdparser_get_xml_prop_unsigned_integer, gst_mpdparser_get_xml_prop_unsigned_integer_64 and gst_mpdparser_get_xml_prop_boolean, the gst_mpdparser_get_xml_prop_duration function should set the property_value to default_value when the parsing fails and the function returns false.
Comment 1 Florin Apostol 2015-07-15 15:22:12 UTC
Created attachment 307482 [details] [review]
proposed patch
Comment 2 Thiago Sousa Santos 2015-07-27 15:37:41 UTC
Review of attachment 307482 [details] [review]:

commit a7751aa96759462b8e95fc850110fd0c6013587c
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Wed Jul 15 16:21:00 2015 +0100

    dashdemux: gst_mpdparser_get_xml_prop_duration sets default value in case of parsing errors
    
    The gst_mpdparser_get_xml_prop_duration function will set the
    property_value to the default_value in case the parsing fails.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=752426