dashdemux: gst_mpdparser_get_xml_prop_duration sets default value in case of parsing errors

The gst_mpdparser_get_xml_prop_duration function will set the
property_value to the default_value in case the parsing fails.

https://bugzilla.gnome.org/show_bug.cgi?id=752426